--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="hoisting.js"></script>
+    <button id="clickme">Click ME</button> 
+
+    <script src="callback.js"></script>
 </body>
 </html>
